feat: add time stamp to status request
