# router/api/v1/status/status.go
@@ -2,20 +2,31 @@ package status
 
 import (
 	"net/http"
+	"time"
 
 	"github.com/TechMinerApps/upmaster/modules/database"
 	"github.com/gin-gonic/gin"
 	"github.com/sirupsen/logrus"
 )
 
+type State uint
+
+const (
+	Up State = iota
+	Down
+)
+
+const layout = "2006-01-02T15:04:05.000Z"
+
 type WriteEndpointResponse struct {
 	WriteEndpointRequest
 }
 
 type WriteEndpointRequest struct {
-	NodeID     int `json:"node_id"`
-	EndpointID int `json:"endpoint_id"`
-	Up         int `json:"up" binding:"required,numeric"`
+	TimeStamp  string `json:"time_stamp"`
+	NodeID     int    `json:"node_id"`
+	EndpointID int    `json:"endpoint_id"`
+	Up         State  `json:"up" binding:"required,numeric"`
 }
 
 func WriteEndpointStatus(c *gin.Context) {
@@ -29,12 +40,18 @@ func WriteEndpointStatus(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
+	timestamp, err := time.Parse(layout, req.TimeStamp)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
 	influx := c.MustGet("InfluxDB").(database.InfluxDB)
 	logger := c.MustGet("Logger").(*logrus.Logger)
 	p := database.StatusPoint{
-		Up:         req.Up,
-		NodeID:     1,
-		EndpointID: 1,
+		Time:       timestamp,
+		Up:         int(req.Up),
+		NodeID:     req.NodeID,
+		EndpointID: req.EndpointID,
 	}
 	influx.Write(&p)
 	logger.Info("StatusPoint write success")
